--- a/main.html
+++ b/main.html
@@ -16,11 +16,11 @@
 	sekjfbjefbefbsefbsjfbsjbfsjdfbsdfsfsfdf.
 	fsefbsjfbsfsjfsbfjsfsbfjbsdfjsdfbsfh</p>
 	<ol>
-		<li><strong>jwhbfhjbf</strong></li>
-		<li><strong>efeejiefe</strong></li>
-		<li><strong>jwhbfeffhjbf</strong></li>
-		<li><strong>jwheebfhjbf</strong></li>
-		<li><strong>jwewehbfhjbf</strong></li>
+		<li><b>jwhbfhjbf</b></li>
+		<li><b>efeejiefe</b></li>
+		<li><b>jwhbfeffhjbf</b></li>
+		<li><b>jwheebfhjbf</b></li>
+		<li><b>jwewehbfhjbf</b></li>
 	</ol>
 	<ul>
 		<li><i>fefwrwbebee</i></li>
